<resources>
    <string name="app_name">Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="percent">%</string>
    <string name="square_root">√</string>
    <string name="power">x<sup>2</sup></string>
    <string name="one_x">1/x</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="backspace"> </string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="decimal">.</string>
    <string name="sign">+/-</string>

    <string name="display">0</string>
    <string name="history"></string>

    <string-array name="equations">
        <item>1+1</item>
        <item>2+1</item>
        <item>3+1</item>
        <item>4+1</item>
        <item>5+1</item>
        <item>6+1</item>
    </string-array>

    <string-array name="solutions">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>